...
        }}
      />
      <Tabs.Screen
        name="(upload)"
        options={{
          title: 'Upload',
          tabBarTestID: 'tab.upload',
          tabBarIcon: ({ color }) => <Icon name="plus-square" size={22} color={color} />,
        }}
      />
      <Tabs.Screen
        name="(library)"
        options={{
...
        }}
      />
      <Tabs.Screen
        name="(profile)"
        options={{
          title: 'Profile',
          tabBarTestID: 'tab.profile',
          tabBarIcon: ({ color }) => <Icon name="user" size={22} color={color} />,
        }}
      />
    </Tabs>
  );
}
...
